--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,17 @@ services:
             context: ./
             dockerfile: ./docker/php/Dockerfile
             args:
-                WWWGROUP: '${WWWGROUP}'
+                WWWGROUP: '${WWWGROUP:-www}'
         image: talos/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
-        ports:
-            - '${APP_PORT:-80}:80'
         environment:
-            WWWUSER: '${WWWUSER}'
+            WWWUSER: '${WWWUSER:-www}'
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
         volumes:
-            - '.:/var/www/html'
+            - ./:/var/www/talos
         networks:
             - talos
         depends_on:
@@ -27,8 +25,21 @@ services:
             - minio
             - selenium
 
+    nginx:
+        image: nginx:1.21-alpine
+        restart: unless-stopped
+        tty: true
+        volumes:
+            - ./:/var/www/talos
+            - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+        ports:
+            - '${APP_PORT:-80}:80'
+            - '${APP_TLS_PORT:-443}:443'
+        networks:
+            - talos
+
     db:
-        image: 'postgres:14'
+        image: postgres:14
         ports:
             - '${FORWARD_DB_PORT:-5432}:5432'
         environment:
@@ -47,7 +58,7 @@ services:
             timeout: 5s
 
     redis:
-        image: 'redis:7'
+        image: redis:7
         ports:
             - '${FORWARD_REDIS_PORT:-6379}:6379'
         volumes:
@@ -60,7 +71,7 @@ services:
             timeout: 5s
 
     meilisearch:
-        image: 'getmeili/meilisearch:v0.26.1'
+        image: getmeili/meilisearch:v0.26.1
         ports:
             - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
         volumes:
@@ -73,7 +84,7 @@ services:
             timeout: 5s
 
     minio:
-        image: 'minio/minio:latest'
+        image: minio/minio:latest
         ports:
             - '${FORWARD_MINIO_PORT:-9000}:9000'
             - '${FORWARD_MINIO_CONSOLE_PORT:-8900}:8900'
@@ -91,7 +102,7 @@ services:
             timeout: 5s
 
     selenium:
-        image: 'selenium/standalone-chrome:101.0'
+        image: selenium/standalone-chrome:101.0
         volumes:
             - '/dev/shm:/dev/shm'
         networks:
@@ -99,7 +110,7 @@ services:
 
 
     mailhog:
-        image: 'mailhog/mailhog:v1.0.1'
+        image: mailhog/mailhog:v1.0.1
         ports:
             - '${FORWARD_MAILHOG_PORT:-1025}:1025'
             - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
