--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "^1.1.4",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "@vueuse/core": "^8.5.0",
+        "element-plus": "^2.2.1",
+        "equal-vue": "^0.79.3",
         "vue": "^3.2.33"
     }
 }
