--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,19 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.2",
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.4.2",
         "inertiajs/inertia-laravel": "^0.5.4",
         "laravel-doctrine/orm": "^1.8",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "symfony/doctrine-bridge": "^6.1",
+        "symfony/validator": "^6.1",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
